--- a/conf/app.conf
+++ b/conf/app.conf
@@ -102,7 +102,8 @@ log.error.prefix = "ERROR "
 
 
 # The default language of this application.
-i18n.default_language = en
+i18n.default_language=es
+i18n.cookie=%(cookie.prefix)s_LANG
 
 # The default format when message is missing.
 # The original message shows in %s
@@ -118,8 +119,6 @@ module.gorm=github.com/wariosolis/modules/gorm
 
 module.3.static=github.com/revel/modules/static
 module.4.jobs=github.com/revel/modules/jobs
-
-
 
 
 ################################################################################
