Fixes Fix css style Adding sidebar left for tags Show home page 25 discussions max Filters by tags or parent tags (discussions) Fix profile image user of discussions (Home page)

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -102,7 +102,7 @@ log.error.prefix = "ERROR "
 
 
 # The default language of this application.
-i18n.default_language=es
+i18n.default_language=en
 i18n.cookie=%(cookie.prefix)s_LANG
 
 # The default format when message is missing.
