Update Revel Version 0.19

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -21,9 +21,9 @@ app.behind.proxy = false
 db.autoinit=true
 db.driver=postgres # mysql, postgres, sqlite3
 db.host=localhost  # Use dbhost  /tmp/gorm.db is your driver is sqlite
-db.name=gorum
-db.password=gorum
-db.user=gorum
+db.name=test
+db.password=admin
+db.user=postgres
 
 
 # The IP address on which to listen.
